...
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fEj-NG-adM">
                    <rect key="frame" x="0.0" y="0.0" width="414" height="651"/>
                    <subviews>
                        <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xj9-ZA-KU8">
                            <rect key="frame" x="0.0" y="0.0" width="414" height="651"/>
                            <subviews>
                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="square.and.pencil" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="sWu-Hp-3gj">
                                    <rect key="frame" x="37" y="62.5" width="340" height="295"/>
                                    <constraints>
                                        <constraint firstAttribute="width" constant="340" id="c9Q-nA-yuy"/>
                                        <constraint firstAttribute="height" constant="296" id="mdo-Xl-NhL"/>
                                    </constraints>
                                </imageView>
                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Ingresa tu usuario" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yJ7-Gc-AHl">
                                    <rect key="frame" x="8" y="430" width="398" height="34"/>
                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                    <textInputTraits key="textInputTraits"/>
                                </textField>
                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Ingresa tu contraseña" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YaN-BI-gOu">
                                    <rect key="frame" x="8" y="492" width="398" height="34"/>
                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                    <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                </textField>
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Orl-TK-fKr">
                                    <rect key="frame" x="8" y="564" width="398" height="30"/>
                                    <state key="normal" title="Iniciar Sesión"/>
                                    <connections>
                                        <action selector="openMapViewButton:" destination="-1" eventType="touchUpInside" id="je9-y7-O6X"/>
                                    </connections>
                                </button>
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4YR-vQ-oQf">
                                    <rect key="frame" x="8" y="614" width="398" height="30"/>
                                    <state key="normal" title="¿No tienes cuenta? Registrate"/>
                                    <connections>
                                        <action selector="registerViewAction:" destination="-1" eventType="touchUpInside" id="hAp-8K-xAl"/>
                                    </connections>
                                </button>
                            </subviews>
                            <constraints>
...
