...
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B4B-gd-FHi">
                    <rect key="frame" x="0.0" y="0.0" width="414" height="406"/>
                    <subviews>
                        <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9wz-xH-YpI">
                            <rect key="frame" x="0.0" y="0.0" width="414" height="406"/>
                            <subviews>
                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Nuevo usuario" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qQZ-84-ZhV">
                                    <rect key="frame" x="8" y="102" width="398" height="34"/>
                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                    <textInputTraits key="textInputTraits"/>
                                </textField>
                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Nueva contraseña" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aZU-Oo-PIP">
                                    <rect key="frame" x="8" y="188" width="398" height="34"/>
                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                    <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                </textField>
                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Empresa" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3xk-jI-B15">
                                    <rect key="frame" x="8" y="258" width="398" height="34"/>
                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                    <textInputTraits key="textInputTraits"/>
                                </textField>
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IgL-pb-6Yy">
                                    <rect key="frame" x="126" y="324" width="162" height="30"/>
                                    <state key="normal" title="Crear cuenta"/>
                                    <connections>
                                        <action selector="createAccountButton:" destination="-1" eventType="touchUpInside" id="3RD-S8-QAy"/>
                                    </connections>
                                </button>
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hkD-i5-WPg">
                                    <rect key="frame" x="123" y="362" width="168" height="30"/>
...
