...
                                    <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
                                    <color key="backgroundColor" red="0.20392156859999999" green="0.19215686269999999" blue="0.29803921570000003" alpha="1" colorSpace="calibratedRGB"/>
                                    <constraints>
                                        <constraint firstAttribute="height" constant="50" id="cqJ-aH-Qmu"/>
                                    </constraints>
                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                    <state key="normal" title="MENU">
                                        <color key="titleColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.94901960780000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                    </state>
                                    <connections>
                                        <action selector="handlerSelection:" destination="-1" eventType="touchUpInside" id="bVv-gz-h4X"/>
                                    </connections>
                                </button>
...
